# rabbitmq-c-plus

./: Dockerfile  docker-compose.yml
consume/: CMakeLists.txt  main.cpp
publish/: Makefile  main.cpp
